--- a/card.html
+++ b/card.html
@@ -46,7 +46,7 @@
 <body ng-controller="MainController">
     <div id="load" class="loading"></div>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow">
         <a class="navbar-brand my-0 mx-3 p-0" href="#">
             <img ng-src="{{ './icon.png' }}" style="width: 40px;" alt="Logo">
         </a>
