feat: add 2 pots

--- a/card.html
+++ b/card.html
@@ -490,6 +490,7 @@
                 "attribute": "light",
                 "level": 1, "atk": 100,"def": 100,
                 "type": "dragon","count_as": null,
+                "subtype": "",
                 "effect": [],
                 "passcode": "000000000"
             };
