feat: add new effects

--- a/card.html
+++ b/card.html
@@ -383,11 +383,20 @@
             "card_played", "card_sent_to_graveyard", "card_banished", "card_returned_to_deck"
         ]
         $scope.effect = [
-            "draw_cards", "increase_atk", "increase_def", "decrease_atk", "decrease_def", "destroy_card",
-            "negate_effect", "prevent_attack", "heal_life_points", "damage_opponent", "search_deck",
-            "special_summon", "change_attribute", "change_type", "double_atk", "double_def", "halve_atk", "halve_def",
-            "friends_power_up", "opponents_power_down"
-        ]
+            "add_counter", "banish_after_use", "banish_to_field", "banish_to_hand", "basish_to_deck",
+            "battle_phase_skip", "boost_allies", "boost_self", "change_attribute", "change_position",
+            "change_type", "copy_effect", "damage_opponent", "decrease_atk", "decrease_def",
+            "decrease_level", "decrease_rank", "deck_mill", "deck_to_graveyard", "deck_to_hand",
+            "destroy_card", "double_atk", "double_def", "draw_cards", "draw_phase_skip",
+            "end_turn", "exodia", "extra_attack", "field_clear", "field_to_deck", "field_to_graveyard",
+            "field_to_hand", "friends_power_up", "graveyard_to_deck", "graveyard_to_field", "graveyard_to_hand",
+            "hand_disruption", "hand_to_deck", "hand_to_graveyard", "heal_life_points", "heal_opponent",
+            "halve_atk", "halve_def", "immunity", "increase_atk", "increase_def", "increase_level",
+            "increase_rank", "lock_card", "negate_effect", "one_per_turn", "opponents_power_down",
+            "piercing_damage", "prevent_attack", "reflect_damage", "remove_counter", "revive_ally",
+            "revive_card", "sacrifice_self", "search_deck", "skip_phase", "special_summon",
+            "token_summon", "unlock_card", "weaken_enemies"
+        ];
 
         $scope.selected = {}
 
