feat: add more efects

--- a/card.html
+++ b/card.html
@@ -387,10 +387,10 @@
             "battle_phase_skip", "boost_allies", "boost_self", "change_attribute", "change_position",
             "change_type", "copy_effect", "damage_opponent", "decrease_atk", "decrease_def",
             "decrease_level", "decrease_rank", "deck_mill", "deck_to_graveyard", "deck_to_hand",
-            "destroy_card", "double_atk", "double_def", "draw_cards", "draw_phase_skip",
+            "destroy_card", "double_atk", "double_def", "draw_cards", "draw_phase_skip", "draw_specific_card", "draw_specific_type",
             "end_turn", "exodia", "extra_attack", "field_clear", "field_to_deck", "field_to_graveyard",
             "field_to_hand", "friends_power_up", "graveyard_to_deck", "graveyard_to_field", "graveyard_to_hand",
-            "hand_disruption", "hand_to_deck", "hand_to_graveyard", "heal_life_points", "heal_opponent",
+            "hand_disruption", "hand_to_deck", "hand_to_graveyard", "heal_life_points", "heal_opponent", "heal_select",
             "halve_atk", "halve_def", "immunity", "increase_atk", "increase_def", "increase_level",
             "increase_rank", "lock_card", "negate_effect", "one_per_turn", "opponents_power_down",
             "piercing_damage", "prevent_attack", "reflect_damage", "remove_counter", "revive_ally",
