--- a/card.html
+++ b/card.html
@@ -384,9 +384,9 @@
         ]
         $scope.effect = [
             "add_counter", "banish_after_use", "banish_to_field", "banish_to_hand", "basish_to_deck",
-            "battle_phase_skip", "boost_allies", "boost_self", "change_attribute", "change_position",
+            "battle_phase_skip", "boost_allies", "boost_self", "catapult_card", "change_attribute", "change_position",
             "change_type", "copy_effect", "damage_opponent", "decrease_atk", "decrease_def",
-            "decrease_level", "decrease_rank", "deck_mill", "deck_to_graveyard", "deck_to_hand",
+            "decrease_level", "decrease_rank", "deck_mill", "deck_to_graveyard", "deck_or_hand_to_graveyard", "deck_to_hand",
             "destroy_card", "double_atk", "double_def", "draw_cards", "draw_phase_skip", "draw_specific_card", "draw_specific_type",
             "end_turn", "exodia", "extra_attack", "field_clear", "field_to_deck", "field_to_graveyard",
             "field_to_hand", "friends_power_up", "graveyard_to_deck", "graveyard_to_field", "graveyard_to_hand",
@@ -395,7 +395,7 @@
             "increase_rank", "lock_card", "negate_effect", "one_per_turn", "opponents_power_down",
             "piercing_damage", "prevent_attack", "reflect_damage", "remove_counter", "revive_ally",
             "revive_card", "sacrifice_self", "search_deck", "skip_phase", "special_summon",
-            "token_summon", "unlock_card", "weaken_enemies"
+            "token_summon", "unlock_card", "weaken_enemies", "zero_damage"
         ];
 
         $scope.selected = {}
