feat: add new effects

--- a/card.html
+++ b/card.html
@@ -383,12 +383,12 @@
             "card_played", "card_sent_to_graveyard", "card_banished", "card_returned_to_deck"
         ]
         $scope.effect = [
-            "add_counter", "banish_after_use", "banish_to_field", "banish_to_hand", "basish_to_deck",
+            "add_counter", "atk_twice", "banish_after_use", "banish_to_field", "banish_to_hand", "basish_to_deck",
             "battle_phase_skip", "boost_allies", "boost_self", "catapult_card", "change_attribute", "change_position",
             "change_type", "copy_effect", "damage_opponent", "decrease_atk", "decrease_def",
             "decrease_level", "decrease_rank", "deck_mill", "deck_to_graveyard", "deck_or_hand_to_graveyard", "deck_to_hand",
             "destroy_card", "double_atk", "double_def", "draw_cards", "draw_phase_skip", "draw_specific_card", "draw_specific_type",
-            "end_turn", "exodia", "extra_attack", "field_clear", "field_to_deck", "field_to_graveyard",
+            "end_turn", "equip_only", "equip_type", "exodia", "extra_attack", "field_clear", "field_to_deck", "field_to_graveyard",
             "field_to_hand", "friends_power_up", "graveyard_to_deck", "graveyard_to_field", "graveyard_to_hand",
             "hand_disruption", "hand_to_deck", "hand_to_graveyard", "heal_life_points", "heal_opponent", "heal_select",
             "halve_atk", "halve_def", "immunity", "increase_atk", "increase_def", "increase_level",
