--- a/card.html
+++ b/card.html
@@ -380,7 +380,7 @@
         $scope.when = [
             "active", "battle", "battle_start", "card_played", "card_sent_to_graveyard", "card_banished", "card_returned_to_deck", "chain", 
             "damage_step", "defend", "destroy", "destroyed_by_effect", "destroyed_by_spell", "destroyed_in_battle", "discard", "draw",
-            "equip", "equip_on", "flip", "fusion", "graveyard_active", "life_points_change", "phase_start", "phase_end", "search", "turn_start", "turn_end", 
+            "equip", "equip_on", "flip", "fusion", "graveyard_active", "life_points_change", "lose_battle", "not_sufion", "phase_start", "phase_end", "search", "turn_start", "turn_end", 
             "unequip", "attack_declared", "summon", "summon_only", "win_battle"
         ]
         $scope.effect = [
