--- a/card.html
+++ b/card.html
@@ -386,7 +386,7 @@
         $scope.effect = [
             "add_counter", "atk_twice", "banish_after_use", "banish_to_field", "banish_to_hand", "basish_to_deck",
             "battle_phase_skip", "boost_allies", "boost_self", "boost_self_for_gy", "catapult_card", "change_attribute", "change_position",
-            "change_type", "copy_effect", "damage_opponent", "damage_opponent_def", "decrease_atk", "decrease_def",
+            "change_type", "copy_effect", "damage_opponent", "damage_opponent_def", "damage_opponent_per_card_field", "decrease_atk", "decrease_def",
             "decrease_level", "decrease_rank", "deck_mill", "deck_to_graveyard", "deck_or_hand_to_field", "deck_or_hand_to_graveyard", "deck_to_hand",
             "destroy_card", "double_atk", "double_def", "draw_cards", "draw_phase_skip", "draw_specific_card", "draw_specific_type",
             "end_turn", "equip_only", "equip_type", "exodia", "extra_attack", "field_clear", "field_to_deck", "field_to_graveyard",
