--- a/card.html
+++ b/card.html
@@ -504,7 +504,9 @@
                 "type": "dragon","count_as": null,
                 "subtype": "",
                 "effect": [],
-                "passcode": "000000000"
+                "passcode": "000000000",
+                "star1": "Moon",
+                "star2": "Sun"
             };
 
             $scope.cardArray.push(newCard);
