--- a/card.html
+++ b/card.html
@@ -379,10 +379,10 @@
         ];
         $scope.when = [
             "active", "battle", "battle_start", "card_played", "card_sent_to_graveyard", "card_banished", "card_returned_to_deck", "chain", 
-            "damage_step", "defend", "destroy", "destroyed_by_effect", "destroyed_by_spell", "destroyed_in_battle", "discard", "draw",
+            "change_position", "change_to_atk", "change_to_def", "damage_step", "defend", "destroy", "destroyed_by_effect", "destroyed_by_spell", "destroyed_in_battle", "discard", "draw",
             "equip", "equip_on", "flip", "fusion", "graveyard_active", "life_points_change", "lose_battle", "not_sufion", "phase_start", "phase_end", "search", "turn_start", "turn_end", 
             "unequip", "attack_declared", "summon", "summon_only", "win_battle"
-        ]
+        ];
         $scope.effect = [
             "add_counter", "atk_twice", "banish_after_use", "banish_to_field", "banish_to_hand", "basish_to_deck",
             "battle_phase_skip", "boost_allies", "boost_self", "boost_self_for_gy", "cannot_combine", "catapult_card", "change_attribute", "change_position",
@@ -397,7 +397,7 @@
             "piercing_damage", "prevent_attack", "reflect_damage", "remove_counter", "revive_ally",
             "revive_card", "sacrifice_self", "search_deck", "skip_phase", "special_summon",
             "shuffle_deck", "shuffle_opponent_deck", "shuffle_choice_deck", "shuffle_top_deck", "shuffle_top_opponent_deck",
-            "token_summon", "top_deck_to_grayveyard", "unlock_card", "view_hand", "view_top_deck", 
+            "token_summon", "top_deck_to_grayveyard", "transform", "unlock_card", "view_hand", "view_top_deck", 
             "weaken_enemies", "zero_damage"
         ];
 
