--- a/card.html
+++ b/card.html
@@ -389,7 +389,7 @@
             "unequip", "attack_declared", "summon", "summon_only", "win_battle"
         ];
         $scope.effect = [
-            "add_counter", "atk_twice", "banish_after_use", "banish_to_field", "banish_to_hand", "basish_to_deck",
+            "add_counter", "atk_twice", "atk_three_times", "banish_after_use", "banish_to_field", "banish_to_hand", "basish_to_deck",
             "battle_phase_skip", "boost_allies", "boost_self", "boost_self_for_gy", "cannot_combine", "catapult_card", "change_attribute", "change_hearth", "change_position",
             "change_type", "copy_effect", "damage_opponent", "damage_opponent_def", "damage_opponent_per_card_field", "decrease_atk", "decrease_def",
             "decrease_level", "decrease_rank", "deck_mill", "deck_to_graveyard", "deck_or_hand_to_field", "deck_or_hand_to_graveyard", "deck_to_hand",
