feat: add not special summon effect

--- a/card.html
+++ b/card.html
@@ -383,7 +383,7 @@
             "active", "battle", "battle_start", "card_played", "card_sent_to_graveyard", "card_banished", "card_returned_to_deck", "chain", 
             "change_position", "change_to_atk", "change_to_def", "damage_step", "defend", "destroy", "destroyed_by_effect", "destroyed_by_spell", "destroyed_in_battle", "discard", "draw",
             "equip", "equip_on", "flip", "fusion", "graveyard_active", "invoke_type", "life_points_change", "lose_battle", 
-            "not_sufion", "opponent_active_spell", "opponent_card_played", 
+            "not_special_summon", "not_sufion", "opponent_active_spell", "opponent_card_played", 
             "opponent_active_trap", "opponent_summon", "opponent_fusion", "phase_start", "phase_end", "search", "someone_active_spell", 
             "target_by_effect", "target_by_spell", "turn_start", "turn_end", 
             "unequip", "attack_declared", "summon", "summon_only", "win_battle"
