Reorder effects in card.html

--- a/card.html
+++ b/card.html
@@ -395,7 +395,7 @@
             "decrease_level", "decrease_rank", "deck_mill", "deck_to_graveyard", "deck_or_hand_to_field", "deck_or_hand_to_graveyard", "deck_to_hand",
             "destroy_card", "direct_atk", "double_atk", "double_def", "draw_cards", "draw_phase_skip", "draw_specific_card", "draw_specific_type",
             "end_turn", "equip_only", "equip_type", "exodia", "extra_attack", "field_clear", "field_to_deck", "field_to_graveyard",
-            "field_to_hand", "friends_power_up", "graveyard_to_deck", "graveyard_to_field", "graveyard_to_hand",
+            "field_to_hand", "friends_def_up", "friends_power_up", "graveyard_to_deck", "graveyard_to_field", "graveyard_to_hand",
             "hand_disruption", "hand_to_deck", "hand_to_graveyard", "heal_life_points", "heal_opponent", "heal_select",
             "halve_atk", "halve_def", "immunity", "increase_atk", "increase_def", "increase_level",
             "increase_rank", "lock_card", "negate_effect", "one_per_turn", "opponents_power_down",
